--- a/html/nav.html
+++ b/html/nav.html
@@ -1,7 +1,7 @@
 
 <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
   <ul class="navigation__list">
-    <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a><a class="login-link navigation__links" href="login.html">Login</a></li>
+    <li class="navigation__list-item"><a class="navigation__links" href="index.html">Home</a><a class="login-link navigation__links" href="login.html">Login</a></li>
   </ul><a class="login-icon-link" href="login.html"><i class="login-icon__button fa-solid fa-user"></i></a>
 </nav>
 <nav class="navigation navigation--mobile">
