--- a/html/order.html
+++ b/html/order.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
-    <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.">
+    <meta name="description" content="Starlight Cinema, a movie theater located in Utrecht.">
     <title>Seaside Cinema</title>
     <link rel="stylesheet" href="css/form.css">
     <link rel="icon" href="images/logo.png" type="image/icon">
@@ -14,7 +14,7 @@
       <div class="sign-up-wrapper">
         <a class="back-button__link" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
         <h1>Order your ticket!</h1>
-        <form class="sign-up-wrapper__form" method="post"> 
+        <form id="sign-up-wrapper__form" method="post" action="/order"> 
           <div> 
             <select id="movie" required> 
               <option value="" disabled="disabled" selected="selected">Movies</option>
